# asterism-start

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/drawable/: drawable.h  shape.h  vertex.h
include/drawable/shapes/: quad.h
include/renderer/: camera.h  device.h  input_manager.h  queue_manager.h  renderer.h  renderer_utility.h  shader_manager.h  swapchain_support_details.h  vertex.h  vulkan_core.h
include/scenes/: scene.h  scene_2D.h  scene_3D.h
include/scenes/scenes_3D/: default_scene.h
shaders/: compile.bat  compile.sh  shader.frag  shader.vert
src/: asterism.cpp
src/drawable/: drawable.cpp  shape.cpp  vertex.cpp
src/drawable/shapes/: quad.cpp
src/renderer/: camera.cpp  device.cpp  input_manager.cpp  queue_manager.cpp  renderer.cpp  renderer_utility.cpp  shader_manager.cpp  swapchain_support_details.cpp  vertex.cpp  vulkan_core.cpp
src/scenes/: scene.cpp  scene_2D.cpp  scene_3D.cpp
src/scenes/scenes_3D/: default_scene.cpp
